// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`directives-and-comments.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# 123
%YAML 1.2
# 456
---
# 789
test
# 000

=====================================output=====================================
# 123
%YAML 1.2
# 456
---
# 789
test
# 000

================================================================================
`;

exports[`separator.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a
---
b
...
c
... #
d
...
---
e
...
#
---
f
--- #
g

=====================================output=====================================
a
---
b
---
c
... #
d
---
e
...
#
---
f
--- #
g

================================================================================
`;

exports[`with-document-head.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
123

=====================================output=====================================
---
123

================================================================================
`;

exports[`with-document-head-like.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---666
123

=====================================output=====================================
---666
123

================================================================================
`;

exports[`without-document-head.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
123

=====================================output=====================================
123

================================================================================
`;
